# a3-rnn-stock-prediction

./: README.md  lstm.ipynb  pyproject.toml
checkpoints/: lstm_with_all_output.pt  lstm_with_c.pt  lstm_with_h.pt  lstm_with_output.pt  rnn2.pt
data/: google_stock_price_test.csv  google_stock_price_test_yfinance.csv  google_stock_price_train.csv  google_stock_price_train_standardized.csv  google_stock_price_train_yfinance.csv
docs/: main.aux  main.bbl  main.bib  main.blg  main.brf  main.fdb_latexmk  main.fls  main.out  main.tex
docs/sec/: 0_abstract.tex  1_intro.tex  2_method.tex  3_experiments.tex  4_conclusion.tex
original_data/: google_stock_price_yfinance.csv
other/: 3day.ipynb  minimas.ipynb  naive_rnn copy.ipynb  naive_rnn.ipynb  predictions.ipynb
other/utils/: dataset.py  strategy.py  training.py  training2.py
utils/: models.py  strategy.py  training3.py
