[project]
name = "a3-rnn-stock-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.2",
    "nbformat>=5.10.4",
    "plotly>=5.24.1",
    "polars>=1.13.1",
    "scikit-learn>=1.5.2",
    "torch>=2.5.1",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.0",
    "yfinance>=0.2.50",
]
